--- a/index.html
+++ b/index.html
@@ -56,14 +56,14 @@
           class="social-link"
           href="https://twitter.com/lifeswryan"
           target="_blank"
-          ><img src="/assets/img/twitterLogoSecondaryColor.svg" alt="twitter"
+          ><img src="./assets/img/twitterLogoSecondaryColor.svg" alt="twitter"
         /></a>
         <!-- facebook -->
         <a
           class="social-link"
           href="https://www.facebook.com/lifeswryan"
           target="_blank"
-          ><img src="/assets/img/facebookLogoSecondaryColor.svg" alt="facebook"
+          ><img src="./assets/img/facebookLogoSecondaryColor.svg" alt="facebook"
         /></a>
         <!-- linkedIn -->
         <a
@@ -72,7 +72,7 @@
           target="_blank"
         >
           <img
-            src="/assets/img/linkedInLogoSecondaryColor.svg"
+            src="./assets/img/linkedInLogoSecondaryColor.svg"
             alt="linkedin"
           />
         </a>
@@ -82,12 +82,12 @@
           href="https://www.instagram.com/lifeswryan/"
           target="_blank"
           ><img
-            src="/assets/img/instagramLogoSecondaryColor.svg"
+            src="./assets/img/instagramLogoSecondaryColor.svg"
             alt="instagram"
         /></a>
         <!-- gitHub -->
         <a class="social-link" href="https://github.com/rtjae1" target="_blank"
-          ><img src="/assets/img/gitHubLogoSecondaryColor.svg" alt="github"
+          ><img src="./assets/img/gitHubLogoSecondaryColor.svg" alt="github"
         /></a>
       </div>
     </div>
